package piece;

public enum couleurPiece {
    BLANC,NOIR
}
